--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
     <section id="player-input-section">
         <h2>Player Input</h2>
         <textarea id="player-input" placeholder="Type your response here"></textarea>
-        <button id="submit-input-btn" onclick="submitPlayerInput()">Submit</button>
+        <button id="submit-input-btn" onclick="submitInput()">Submit</button>
     </section>
 </main>
 
