--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,9 +17,26 @@
         <div id="player-stats"></div>
     </section>
 
-    <section id="player-hand-section">
-        <h2>Player Hand</h2>
-        <div id="player-hand"></div>
+    <section id="player-hands-section">
+        <h2>Player Hands</h2>
+        <div id="player-hands">
+            <div id="player1-hand-container" class="player-hand-container">
+                <h3>Player 1 Hand</h3>
+                <div id="player1-hand" class="player-hand"></div>
+            </div>
+            <div id="player2-hand-container" class="player-hand-container">
+                <h3>Player 2 Hand</h3>
+                <div id="player2-hand" class="player-hand"></div>
+            </div>
+            <div id="player3-hand-container" class="player-hand-container">
+                <h3>Player 3 Hand</h3>
+                <div id="player3-hand" class="player-hand"></div>
+            </div>
+            <div id="player4-hand-container" class="player-hand-container">
+                <h3>Player 4 Hand</h3>
+                <div id="player4-hand" class="player-hand"></div>
+            </div>
+        </div>
     </section>
 
     <section id="game-log-section">
