selenium tests written
i hope it works

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
 
     <section id="game-log-section">
         <h2>Game Log</h2>
-        <div id="game-log"></div>
+        <div id="game-log" class="log-container"></div>
     </section>
 
     <section id="controls-section">
